// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Navigation props 1`] = `
Object {
  "className": "css-13h683e css-1pwrqjj css-3ekj6a fp-Box fp-Navigation",
  "role": "navigation",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
  role="navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-15 emotion-1 emotion-2 test fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</nav>
`;

exports[`overrides Navigation.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  background-color: red;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</nav>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</nav>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-17 {
  background-color: #574feb !important;
}

<nav
  class="emotion-15 emotion-1 emotion-17 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</nav>
`;

exports[`theming Navigation.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  color: #574feb;
  fill: #574feb;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.emotion-0:hover {
  color: #1a1746;
  fill: #1a1746;
}

.emotion-0:focus {
  outline-style: dashed;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  background-color: red;
}

<nav
  class="emotion-15 emotion-1 emotion-2 fp-Box fp-Navigation"
>
  <ul
    class="emotion-12 emotion-1 emotion-2 fp-Box fp-List"
  >
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://google.com"
      >
        Google
      </a>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 fp-Box fp-ListItem"
    >
      <a
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Link"
        href="https://github.com"
      >
        GitHub
      </a>
    </div>
  </ul>
</nav>
`;
